--- a/buy-product/package.json
+++ b/buy-product/package.json
@@ -55,6 +55,8 @@
     "@loopback/rest": "^15.0.5",
     "@loopback/rest-explorer": "^8.0.5",
     "@loopback/service-proxy": "^8.0.4",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "loopback-connector-postgresql": "^7.2.3",
     "tslib": "^2.0.0"
   },
