--- a/billing-service/package.json
+++ b/billing-service/package.json
@@ -59,6 +59,7 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^17.2.3",
     "loopback-connector-postgresql": "^7.2.3",
+    "pdfkit": "^0.17.2",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -67,6 +68,7 @@
     "@loopback/testlab": "^8.0.4",
     "@types/dotenv": "^6.1.1",
     "@types/node": "^16.18.126",
+    "@types/pdfkit": "^0.17.3",
     "eslint": "^8.57.1",
     "source-map-support": "^0.5.21",
     "typescript": "~5.2.2"
